<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/user_login_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/user_login_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/user_login_guideline"
        android:text="@string/login_form_header"
        android:textAlignment="center"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/user_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/login_placeholder"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/user_login_explanation" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/user_password_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/user_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/user_login_form" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_authorization_submit"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/user_password_form"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/user_data_complaint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf = "@id/user_login_guideline"
        android:text="@string/user_authorization_complaint"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:visibility="invisible"
        tools:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
</androidx.constraintlayout.widget.ConstraintLayout>